--- a/package.json
+++ b/package.json
@@ -6,17 +6,30 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "NODE_ENV=development BABEL_ENV=development webpack-dev-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/preset-typescript": "^7.6.0",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/redux-logger": "^3.0.7",
+    "antd": "^3.24.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^7.0.0-beta.41",
+    "babel-loader": "7",
+    "babel-plugin-import": "^1.12.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-react-app": "^2.2.0",
+    "babel-runtime": "^6.20.0",
     "connected-react-router": "^6.5.2",
     "css-loader": "^3.2.0",
     "node-sass": "^4.13.0",
@@ -38,5 +51,10 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
+  },
+  "babel": {
+    "plugins": [
+      ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
+    ]
   }
 }
