--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,3 +63,20 @@
     "./src/**/*"
   ]
 }
+
+// {
+//   "compilerOptions": {
+//     "target": "esnext",
+//     "module": "esnext",
+//     "moduleResolution": "node",
+//     "importHelpers": true,
+//     "jsx": "preserve",
+//     "esModuleInterop": true,
+//     "sourceMap": true,
+//     "baseUrl": ".",
+//     "paths": {
+//       "@/*": ["src/*"]
+//     },
+//     "allowSyntheticDefaultImports": true
+//   }
+// }
